Product buttons alignment issue for larger screen addressed

--- a/app-src/app/nav/nav.scss
+++ b/app-src/app/nav/nav.scss
@@ -267,7 +267,7 @@
 		.product-buttons {
 			display: flex;
 			flex-flow: row nowrap;
-			justify-content: space-evenly;
+			justify-content: flex-start;
 		    margin: 30px 0;
 		    width: 100%;
 		    .pickup-store {
@@ -320,7 +320,7 @@
 			display: flex;
 			flex-direction: row;
 			width: 100%;
-			justify-content: space-evenly;
+			justify-content: flex-start;
 		    align-items: flex-start;
 			margin-top: 30px;
 			.add-to-registry, .add-to-list, .share {
